IaC/mh-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mh-app
  name: mh-app
  namespace: mh-website
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mh-app
  sessionAffinity: None
  type: ClusterIP
